# CGP_Master_node

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/authentication/: admin.py  models.py  urls.py  views.py
app/config/: settings.py  urls.py
app/utils/: filters.py  mixins.py
app/worknodes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/workspaces/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/accounts/: admin.py  apps.py  models.py  urls.py  views.py
project/config/: settings.py  urls.py
project/nodes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/projects/: models.py  serializers.py  urls.py
